--- a/product.html
+++ b/product.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <a href="shop.html" class="back-button">← Tillbaka till butiken</a>
   <main id="product-detail" class="product-page">
+    
     <!-- Innehållet fylls på av JavaScript -->
   </main>
 
