--- a/product.html
+++ b/product.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,9 +8,12 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <a href="shop.html" class="back-button">← Tillbaka till butiken</a>
+  <header>
+    <h1 class="logo">Elm</h1>
+    <button id="cart-icon">🛒 (<span id="cart-count">0</span>)</button>
+  </header>
   <main id="product-detail" class="product-page">
-    
+    <a href="shop.html" class="back-button">← Tillbaka till butiken</a>
     <!-- Innehållet fylls på av JavaScript -->
   </main>
 
