Fixed link from login to register and vice versa

--- a/profile.html
+++ b/profile.html
@@ -13,6 +13,7 @@
       <input type="email" name="email" placeholder="E-post" required>
       <input type="password" name="password" placeholder="Lösenord" required>
       <button type="submit">Logga in</button>
+      <p>Har inget konto? <a href="register.html">Registrera dig här</a>.</p>
     </form>
 
     <div id="welcome-msg" style="display:none;"></div>
