Implemented PHP session-based cart + updated checkout display and responsive product layout

--- a/shop.html
+++ b/shop.html
@@ -11,8 +11,8 @@
 <header>
     <h1 class="logo">Elm</h1>
     <nav>
-        <a href="shop.html">Produkter</a>
-        <a href="profile.html">Profil</a>
+        <a href="shop.html" class="menu-link">Produkter</a>
+        <a href="profile.html" class="menu-link">Profil</a>
     </nav>
     <button id="cart-icon">🛒 (<span id="cart-count">0</span>)</button>
 </header>
