--- a/shop.html
+++ b/shop.html
@@ -13,10 +13,10 @@
           <h1 class="logo">Elm</h1>
         </div>
         <nav>
-          <a class="menu-link" href="#">Produkter</a>
-          <a class="menu-link" href="#">Kontakt</a>
-          <a class="menu-link" href="#">Profil</a>
-          <button id="cart-icon"><i class="fas fa-shopping-cart"></i> (0)</button>
+          <a class="menu-link" href="shop.html">Produkter</a>
+          <a class="menu-link" href="contact.html">Kontakt</a>
+          <a class="menu-link" href="profile.html">Profil</a>
+          <button id="cart-icon">🛒 <i class="fas fa-shopping-cart"></i> <span id="cart-count">(0)</span></button>
         </nav>
     </header>
 
