--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     <main>
         <section id="login-section">
             <h2>Inloggning</h2>
-            <form id="login-form">
+            <form id="login-form" method="POST">
                 <label for="login-email">E-post</label>
                 <input type="email" id="login-email" required>
                 <label for="login-password">Lösenord</label>
