--- a/checkout.html
+++ b/checkout.html
@@ -8,14 +8,12 @@
     </head>
     <body>
         <header>
-            <div class="logo-container">
-              <h1 class="logo">Elm</h1>
-            </div>
+            <h1 class="logo">Elm</h1>
             <nav>
               <a class="menu-link" href="shop.html">Produkter</a>
               <a class="menu-link" href="contact.html">Kontakt</a>
               <a class="menu-link" href="profile.html">Profil</a>
-              <button id="cart-icon" class="menu-link">🛒 <i class="fas fa-shopping-cart"></i> <span id="cart-count">(0)</span></button>
+              <button id="cart-icon">🛒 <i class="fas fa-shopping-cart"></i> <span id="cart-count">(0)</span></button>
             </nav>
         </header>
 
@@ -26,10 +24,8 @@
         </div>
         
         <main>
-            <header>
                 <p class="slogan-subtext">Din grönaste växtbutik på nätet</p>
                 <hr class="slogan-line">
-            </header>
             <a href="shop.html" class="back-button">← Fortsätt handla</a>
 
             <h1>Slutför ditt köp</h1>
