--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
       <a class="menu-link" href="shop.html">Produkter</a>
       <a class="menu-link" href="contact.html">Kontakt</a>
       <a class="menu-link" href="profile.html">Profil</a>
-      <button id="cart-icon">🛒 <span id="cart-count">(0)</span></button>
+      <button id="cart-icon">🛒 <i class="fas fa-shopping-cart"></i> <span id="cart-count">(0)</span></button>
     </nav>
   </header>
 
@@ -23,10 +23,8 @@
   </section>
 
   <main>
-    <header>
       <p class="slogan-subtext">Din grönaste växtbutik på nätet</p>
       <hr class="slogan-line">
-    </header>
 
     <h1>Min profil</h1>
 
