--- a/login.html
+++ b/login.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>Elm</h1>
+    <h1 class="logo">Elm</h1>
     <nav>
-      <a href="shop.html">Butik</a>
-      <a href="login.html">Profil</a>
+      <a class="menu-link" href="shop.html">Produkter</a>
+      <a class="menu-link" href="contact.html">Kontakt</a>
+      <a class="menu-link" href="profile.html">Profil</a>
+      <button id="cart-icon">🛒 <i class="fas fa-shopping-cart"></i> <span id="cart-count">(0)</span></button>
     </nav>
   </header>
 
