--- a/profile.html
+++ b/profile.html
@@ -6,13 +6,17 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@400&display=swap" rel="stylesheet">
+  
   <header>
     <h1 class="logo">Elm</h1>
     <nav>
       <a class="menu-link" href="shop.html">Produkter</a>
       <a class="menu-link" href="contact.html">Kontakt</a>
-      <a class="menu-link" href="profile.html">Profil</a>
-      <button id="cart-icon">🛒 <i class="fas fa-shopping-cart"></i> <span id="cart-count">(0)</span></button>
+      <a class="link-on-page" href="profile.html">Profil</a>
+      <button id="cart-icon" class="menu-link">🛒 <span id="cart-count">(0)</span></button>
     </nav>
   </header>
 
@@ -45,7 +49,7 @@
     </section>
 
     <section id="logout-section" class="hidden">
-      <button id="logout-btn">Logga ut</button>
+      <button class="btn">Logga ut</button>
     </section>
 
     <!-- Modal för orderdetaljer -->
