feat: integrate PHPMailer for order confirmation and fix charset issues causing broken characters

--- a/checkout.html
+++ b/checkout.html
@@ -38,7 +38,7 @@
             
 
             <h2>Leveransuppgifter</h2>
-            <form id="checkout-form">
+            <form id="checkout-form" method="POST">
                 <input type="text" id="name" placeholder="Namn" required><br><br>
                 <input type="text" id="address" placeholder="Adress" required><br><br>
                 <input type="email" id="email" placeholder="E-post" required><br><br>
