refactor: change logout-function to php instead of fetch() in javascript

--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,7 @@
     </section>
 
     <section id="logout-section" class="hidden">
-      <button class="btn">Logga ut</button>
+      <a href="logout.php" class="logout-btn">Logga ut</a>
     </section>
 
     <!-- Modal för orderdetaljer -->
