feat: convert product page to server-rendered PHP, remove product.js, temporarily disable filtering

--- a/product.html
+++ b/product.html
@@ -28,11 +28,10 @@
   <button class="checkout-btn" onclick="window.location.href='checkout.html'">Gå till kassan</button>
 </div>
 
-  <main id="product-detail" class="product-page">
-    <a href="shop.html" class="back-button">← Tillbaka till butiken</a>
-    <!-- Innehållet fylls på av JavaScript -->
-  </main>
+<main class="product-page">
+  <a href="shop.php" class="back-button">← Tillbaka till butiken</a>
+  {{product-detail}}
+</main>
 
-  <script src="product.js"></script>
 </body>
 </html>
