--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
   <header>
     <h1 class="logo">Elm</h1>
     <nav>
-      <a class="menu-link" href="shop.html">Produkter</a>
+      <a class="menu-link" href="shop.php">Produkter</a>
       <a class="menu-link" href="contact.html">Kontakt</a>
       <a class="link-on-page" href="profile.html">Profil</a>
       <button id="cart-icon" class="menu-link">🛒 <span id="cart-count">(0)</span></button>
